<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fts_pkg</name>
  <version>0.1.0</version>
  <description>Force Torque Sensor package</description>
  <maintainer email="bigyun9375@gmail.com">daeyun</maintainer>
  <license>Apache License 2.0</license>

  <!-- <exec_depend>rclpy</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>custom_interfaces</exec_depend>
  <!-- <depend>custom_interfaces</depend> -->
  <!-- <depend>ros2_control</depend>
  <depend>ros2_control_interfaces</depend> -->

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
