<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_py_pkg</name>
  <version>0.0.0</version>
  <description>gui-for-control</description>
  <maintainer email="bigyun9375@gmail.com">daeyun</maintainer>
  <license>Apache-License-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_interfaces</depend>
  <depend>sensor_msgs</depend>

  <!-- <exec_depend>custom_interfaces</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
